# LAB3

./: Cs137_decay_rate.cpp  Cs137_fitGausMult.cpp  Cs137_spettro.cpp  GameManager.cpp  GameManager.h  LED_intensity_var.cpp  Sr90_decay_rate.cpp  Sr90_spettro.cpp  cosmic_rays.cpp  main.cpp  new_Sr90_spettro.cpp
GuderianDream02/: Airplane.h  Bf109.cpp  Bf109.h  CMakeLists.txt  Division.h  GameManager.cpp  GameManager.h  GermanFactory.cpp  GermanFactory.h  GermanInfantry.cpp  GermanInfantry.h  Infantry.h  PanzerIV.cpp  PanzerIV.h  RussianFactory.cpp  RussianInfantry.cpp  RussianInfantry.h  T34.cpp  T34.h  Tank.h  Territory.cpp  Territory.h  Turn.cpp  Turn.h  Turn2.cpp  Turn2.h  Yak3.cpp  Yak3.h  infantry.h.autosave  main.cpp  myprogram
LED_variazione_intensità/: 54v30int.txt  54v32int.txt
Macros struttura/Calibrazione strumenti/: amplificatore.cpp  funzione_tacche_to_lambda.cpp  (+5 more)
Progetto001/: Abstract_Factory.h  Airplane.h  Bf109.h  CMakeLists.txt  Division.h  GameManager.cpp  GameManager.h  GermanFactory.cpp  GermanFactory.h  GermanInfantry.cpp  Infantry.h  PanzerIV.cpp  PanzerIV.h  RussianFactory.cpp  RussianFactory.h  RussianInfantry.cpp  RussianInfantry.h  Tank.h  Territory.h  Turn.cpp  Turn.h  Turn2.cpp  Yak3.cpp  Yak3.h  main.cpp
roba_csv_lock_in/: processed_csv.csv  sus.py  susamogus.csv  tabella dati I0, trasmittanza e fotocorrente.xlsx
roottest/: Absorption  ExpFit  ExpFit.txt  HistFit  HistFit.txt  Str-90.py  absorption.py  bridge.txt  dcr_oct.py  dcr_oct_temp.py  fitresults.txt  main.py  np.txt  raggi_cosmici.py  roottest.pyproject  utility.py
(+80 files in other folders)
